# sparsity_characterization

./: .gitignore  CLAUDE.md  README.md  REPORT.md  pyproject.toml
notebooks/: sparsity_evaluation.py
results/metrics/: sparsegpt_down_proj.json  sparsegpt_up_proj.json  wanda_down_proj.json  wanda_up_proj.json
scripts/agglomerative/: FEATURE_FLOW_VISUALIZATION.md  README.md  agglomerative_clustering.py  make_clusters.py  test_visualization.py
scripts/analysis/: README.md  agglomerative_clustering_analysis.py  agglomerative_clustering_full.py  agglomerative_clustering_sparsegpt_gate_proj.py  agglomerative_clustering_sparsegpt_up_proj.py  agglomerative_clustering_top128.py  agglomerative_clustering_top128_distribution.py  agglomerative_clustering_wanda_full.py  agglomerative_clustering_wanda_gate_proj.py  agglomerative_clustering_wanda_up_proj.py  generate_comparative_report.py  generate_seed_detail_tables.py  greedy_clustering.py  hamming_cluster_analysis.py  multi_execution_hamming_analysis.py  multi_seed_clustering_analysis.py  multi_seed_hamming_comparison.py  nearest_neighbor_clustering.py  sparsegpt_kmeans_k_sweep.py  sparsegpt_kmeans_k_sweep_full_matrix.py  test_between_cluster_fix.py  visualize_agglomerative_clustering.py  visualize_all_projections.py  visualize_full_clustering_results.py  visualize_sparsegpt_full_matrix_comparison.py  visualize_sparsegpt_k_sweep.py  visualize_wanda_k_sweep.py  (+3 more)
src/: README.md  __init__.py  data_loaders.py  database.py  exhaustive_sampling.py  hamming_utils.py  ingest.py  main.py  matrix_analysis.py  visualization.py
(+20 files in other folders)
