[project]
name = "workloads"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "marimo>=0.16.3",
    "matplotlib>=3.10.1",
    "pandas>=2.3.3",
    "rich>=14.1.0",
    "sqlglot>=27.20.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "triton>=3.2.0",
]
